# Final_Project_Qt

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Final_project.ilk  README.md  build.ninja  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui
